--- a/stories/index.html
+++ b/stories/index.html
@@ -872,6 +872,18 @@
   </thead>
   <tbody>
     <tr>
+      <td>0002</td>
+      <td><a href="/stories/gu/0002_પ્રાણિઓ-ને-જો_slides.html" target="_blank">પ્રાણિઓ ને જો</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0002"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0003</td>
+      <td><a href="/stories/gu/0003_નિશાડ-ના-કપડા_slides.html" target="_blank">નિશાડ ના કપડા</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0007</td>
       <td><a href="/stories/gu/0007_પાનિ-ગોત્વાનુ_slides.html" target="_blank">પાનિ ગોત્વાનુ.</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -884,10 +896,28 @@
       <td><a name="gu0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0009</td>
+      <td><a href="/stories/gu/0009_મારિ-બિલાડી-ક્યાં-છે_slides.html" target="_blank">મારિ બિલાડી ક્યાં છે?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0049</td>
       <td><a href="/stories/gu/0049_મેઘધનુષ્ય_slides.html" target="_blank">મેઘધનુષ્ય</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="gu0049"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0053</td>
+      <td><a href="/stories/gu/0053_આ-હું-છું_slides.html" target="_blank">આ હું છું</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0053"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0067</td>
+      <td><a href="/stories/gu/0067_રસોઈ_slides.html" target="_blank">રસોઈ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0093</td>
@@ -902,6 +932,18 @@
       <td><a name="gu0098"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0112</td>
+      <td><a href="/stories/gu/0112_મારો-શરિર_slides.html" target="_blank">મારો શરિર</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0112"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0120</td>
+      <td><a href="/stories/gu/0120_વાળ_slides.html" target="_blank">વાળ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0120"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0126</td>
       <td><a href="/stories/gu/0126_વાદળા_slides.html" target="_blank">વાદળા</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -914,16 +956,40 @@
       <td><a name="gu0127"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0129</td>
+      <td><a href="/stories/gu/0129_મારો-આળસુરો-ભાઇ_slides.html" target="_blank">મારો આળસુરો ભાઇ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0129"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0130</td>
       <td><a href="/stories/gu/0130_મારા-દાદી_slides.html" target="_blank">મારા દાદી</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="gu0130"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0156</td>
+      <td><a href="/stories/gu/0156_ભુખ્ય-મગર_slides.html" target="_blank">ભુખ્ય મગર</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0192</td>
       <td><a href="/stories/gu/0192_આશા-એક-મગફળિ-મખન-નું-સેંડવિચ-છે_slides.html" target="_blank">આશા એક મગફળિ-મખન નું સેંડવિચ છે.</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="gu0192"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0212</td>
+      <td><a href="/stories/gu/0212_મારિ-નાનક્રિ-બક્રિ_slides.html" target="_blank">મારિ નાનક્રિ બક્રિ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0212"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0215</td>
+      <td><a href="/stories/gu/0215_નાસ્તો_slides.html" target="_blank">નાસ્તો</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0215"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0223</td>
@@ -954,6 +1020,12 @@
       <td><a href="/stories/gu/0309_નાનુ-અને-મોટુ_slides.html" target="_blank">નાનુ અને મોટુ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="gu0309"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0320</td>
+      <td><a href="/stories/gu/0320_તુ-સુ-કરે-છે_slides.html" target="_blank">તુ સુ કરે છે?</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0320"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0341</td>
@@ -1755,13 +1827,13 @@
       <td>0002</td>
       <td><a href="http://my.africanstorybook.org/stories/look-animals">Look at the animals</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#da0002">da</a>, <a href="#eo0002">eo</a>, <a href="#nn0002">nn</a>, <a href="#no0002">no</a>, <a href="#yue0002">yue</a>, <a href="#zh0002">zh</a></td>
+      <td><a href="#da0002">da</a>, <a href="#eo0002">eo</a>, <a href="#gu0002">gu</a>, <a href="#nn0002">nn</a>, <a href="#no0002">no</a>, <a href="#yue0002">yue</a>, <a href="#zh0002">zh</a></td>
     </tr>
     <tr>
       <td>0003</td>
       <td><a href="http://my.africanstorybook.org/stories/school-clothes">School clothes</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#da0003">da</a>, <a href="#eo0003">eo</a>, <a href="#nn0003">nn</a>, <a href="#no0003">no</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
+      <td><a href="#da0003">da</a>, <a href="#eo0003">eo</a>, <a href="#gu0003">gu</a>, <a href="#nn0003">nn</a>, <a href="#no0003">no</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
     </tr>
     <tr>
       <td>0004</td>
@@ -1791,7 +1863,7 @@
       <td>0009</td>
       <td><a href="http://my.africanstorybook.org/stories/where-my-cat">Where is my cat?</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#sv0009">sv</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
+      <td><a href="#da0009">da</a>, <a href="#de0009">de</a>, <a href="#eo0009">eo</a>, <a href="#gu0009">gu</a>, <a href="#ja0009">ja</a>, <a href="#jam0009">jam</a>, <a href="#nn0009">nn</a>, <a href="#no0009">no</a>, <a href="#sv0009">sv</a>, <a href="#yue0009">yue</a>, <a href="#zh0009">zh</a></td>
     </tr>
     <tr>
       <td>0010</td>
@@ -1815,7 +1887,7 @@
       <td>0053</td>
       <td><a href="http://my.africanstorybook.org/stories/me">This is me</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#yue0053">yue</a>, <a href="#zh0053">zh</a></td>
+      <td><a href="#gu0053">gu</a>, <a href="#yue0053">yue</a>, <a href="#zh0053">zh</a></td>
     </tr>
     <tr>
       <td>0057</td>
@@ -1833,7 +1905,7 @@
       <td>0067</td>
       <td><a href="http://my.africanstorybook.org/stories/cooking">Cooking</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#no0067">no</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
+      <td><a href="#gu0067">gu</a>, <a href="#no0067">no</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
     </tr>
     <tr>
       <td>0068</td>
@@ -1893,13 +1965,13 @@
       <td>0112</td>
       <td><a href="http://my.africanstorybook.org/stories/my-body">My body</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#eo0112">eo</a>, <a href="#nn0112">nn</a>, <a href="#no0112">no</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
+      <td><a href="#eo0112">eo</a>, <a href="#gu0112">gu</a>, <a href="#nn0112">nn</a>, <a href="#no0112">no</a>, <a href="#yue0112">yue</a>, <a href="#zh0112">zh</a></td>
     </tr>
     <tr>
       <td>0120</td>
       <td><a href="http://my.africanstorybook.org/stories/hair">Hair</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
+      <td><a href="#gu0120">gu</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
     </tr>
     <tr>
       <td>0122</td>
@@ -1929,7 +2001,7 @@
       <td>0129</td>
       <td><a href="http://my.africanstorybook.org/stories/lazy-little-brother">Lazy little brother</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#nn0129">nn</a>, <a href="#no0129">no</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
+      <td><a href="#gu0129">gu</a>, <a href="#nn0129">nn</a>, <a href="#no0129">no</a>, <a href="#yue0129">yue</a>, <a href="#zh0129">zh</a></td>
     </tr>
     <tr>
       <td>0130</td>
@@ -1965,7 +2037,7 @@
       <td>0156</td>
       <td><a href="http://my.africanstorybook.org/stories/hungry-crocodile">The hungry crocodile</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#nn0156">nn</a>, <a href="#no0156">no</a>, <a href="#sv0156">sv</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
+      <td><a href="#gu0156">gu</a>, <a href="#nn0156">nn</a>, <a href="#no0156">no</a>, <a href="#sv0156">sv</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
     </tr>
     <tr>
       <td>0172</td>
@@ -2019,7 +2091,7 @@
       <td>0212</td>
       <td><a href="http://my.africanstorybook.org/stories/my-little-goat">My little goat</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#zh0212">zh</a></td>
+      <td><a href="#gu0212">gu</a>, <a href="#zh0212">zh</a></td>
     </tr>
     <tr>
       <td>0214</td>
@@ -2031,7 +2103,7 @@
       <td>0215</td>
       <td><a href="http://my.africanstorybook.org/stories/breakfast">Breakfast</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#yue0215">yue</a>, <a href="#zh0215">zh</a></td>
+      <td><a href="#gu0215">gu</a>, <a href="#yue0215">yue</a>, <a href="#zh0215">zh</a></td>
     </tr>
     <tr>
       <td>0223</td>
@@ -2109,7 +2181,7 @@
       <td>0320</td>
       <td><a href="http://my.africanstorybook.org/stories/what-are-you-doing-1">What are you doing?</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#zh0320">zh</a></td>
+      <td><a href="#gu0320">gu</a>, <a href="#zh0320">zh</a></td>
     </tr>
     <tr>
       <td>0327</td>
