--- a/stories/gu/0151_હવામાન_slides.html
+++ b/stories/gu/0151_હવામાન_slides.html
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="私の絵本" class="slide level1">
-<h1>私の絵本</h1>
+<section id="હવમન" class="slide level1">
+<h1>હવામાન</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/02.jpg" /></p>
-<p>女の子。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/02.jpg" /></p>
+<p>વાદળા હોય તો વર્શાદ આવ્વુ જોયે.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/03.jpg" /></p>
-<p>鳥。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/03.jpg" /></p>
+<p>આજે બહુ ગર્મી છે. કેમ?</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/04.jpg" /></p>
-<p>ライオン。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/04.jpg" /></p>
+<p>આકાશ વાદળા પાછર સંતાઇ. મને વાદળા બહુ ગમે.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0253/05.jpg" /></p>
-<p>猫。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/05.jpg" /></p>
+<p>&quot;બારે વર્શાદ પળે છે?&quot; શિક્ષક નાબુને એ પુછ્યુ.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,12 +132,30 @@
 </section>
 <section class="slide level1">
 
-<h2 id="私の絵本-1">私の絵本</h2>
-<strong>作:</strong> Oku Modesto<br> <strong>絵:</strong> Rob Owen, Marleen Visser, Katrien Coetzer, Wiehan de Jager, Karen Lilje, Catherine Groenewald, Alice Toich<br> <strong>訳:</strong> dohliam<br> <strong>言語:</strong> 日本語<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/06.jpg" /></p>
+<p>પવન આવે છે?</p>
+<center>
+<strong>5</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0151/07.jpg" /></p>
+<p>મને હવામાન વધારે સમજવું છે.</p>
+<center>
+<strong>6</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="હવમન-1">હવામાન</h2>
+<strong>Text:</strong> Clark Ness<br> <strong>Illustrations:</strong> Microsoft Clip Art, Jesse Breytenbach, Wiehan de Jager, Rijuta Ghate, Vusi Malindi<br> <strong>Translation:</strong> Darshan Soni<br> <strong>Language:</strong> Gujarati<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/my-picture-book-0'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/weather-0'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
