--- a/stories/index.html
+++ b/stories/index.html
@@ -968,10 +968,22 @@
       <td><a name="gu0130"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0151</td>
+      <td><a href="/stories/gu/0151_હવામાન_slides.html" target="_blank">હવામાન</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0151"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0156</td>
       <td><a href="/stories/gu/0156_ભુખ્ય-મગર_slides.html" target="_blank">ભુખ્ય મગર</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="gu0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0176</td>
+      <td><a href="/stories/gu/0176_સાંભ્રો_slides.html" target="_blank">સાંભ્રો</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0176"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0192</td>
@@ -2031,7 +2043,7 @@
       <td>0151</td>
       <td><a href="http://my.africanstorybook.org/stories/weather-0">Weather</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#zh0151">zh</a></td>
+      <td><a href="#gu0151">gu</a>, <a href="#zh0151">zh</a></td>
     </tr>
     <tr>
       <td>0156</td>
@@ -2049,7 +2061,7 @@
       <td>0176</td>
       <td><a href="http://my.africanstorybook.org/stories/listen">Listen</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#zh0176">zh</a></td>
+      <td><a href="#gu0176">gu</a>, <a href="#zh0176">zh</a></td>
     </tr>
     <tr>
       <td>0192</td>
