--- a/stories/index.html
+++ b/stories/index.html
@@ -920,6 +920,12 @@
       <td><a name="gu0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0087</td>
+      <td><a href="/stories/gu/0087_મને-વાંચવુ-ગમે_slides.html" target="_blank">મને વાંચવુ ગમે!</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="gu0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0093</td>
       <td><a href="/stories/gu/0093_મારો-બાબ્લો_slides.html" target="_blank">મારો બાબ્લો</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -1953,7 +1959,7 @@
       <td>0087</td>
       <td><a href="http://my.africanstorybook.org/stories/i-read">I like to read</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#es0087">es</a>, <a href="#hi0087">hi</a>, <a href="#no0087">no</a>, <a href="#sv0087">sv</a>, <a href="#zh0087">zh</a></td>
+      <td><a href="#es0087">es</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#no0087">no</a>, <a href="#sv0087">sv</a>, <a href="#zh0087">zh</a></td>
     </tr>
     <tr>
       <td>0093</td>
