--- a/stories/nn/0095_zama_er_flink.html
+++ b/stories/nn/0095_zama_er_flink.html
@@ -85,7 +85,7 @@ Eg vaknar tidleg, fordi eg er flink!</p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
 
-<p>Mamma minner på, “Gløym ikkje tennene.”
+<p>Mamma påminner, “Gløym ikkje tennene.”
 Eg svarar: “Aldri, ikkje eg!”</p>
 
 <div class="pagenum">6</div>
@@ -93,7 +93,7 @@ Eg svarar: “Aldri, ikkje eg!”</p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/08.jpg" /></p>
 
-<p>Etter vask helsar eg på bestefar og tante og ynskjer dei ein god dag.</p>
+<p>Etter kroppsvasken helsar eg på bestefar og tante og ynskjer dei ein god dag.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
