--- a/stories/es/0302_el-fuego.html
+++ b/stories/es/0302_el-fuego.html
@@ -49,14 +49,14 @@ Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>Español</div><d
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/02.jpg" /></p>
 
-<p>Mira, ¡el fuego!</p>
+<p>¡Mira, fuego!</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/03.jpg" /></p>
 
-<p>El fuego quema todo.</p>
+<p>El fuego quema.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -70,40 +70,40 @@ Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br>Español</div><d
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/05.jpg" /></p>
 
-<p>El fuego nos da el calor.</p>
+<p>El fuego calienta.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/06.jpg" /></p>
 
-<p>El fuego nos da la luz.</p>
+<p>El fuego ilumina.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/07.jpg" /></p>
 
-<p>Mira, ¡el fuego!</p>
+<p>¡Mira, fuego!</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/08.jpg" /></p>
 
-<p>El fuego está maravillosa</p>
+<p>El fuego es maravilloso.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/09.jpg" /></p>
 
-<p>Y está potente.</p>
+<p>Y es poderoso.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Texto:</strong> Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br /><strong>Ilustración:</strong> Rob Owen<br /><strong>Traducción:</strong> Darshan Soni<br /><strong>Idioma:</strong> Español</p>
+<p><strong>Texto:</strong> Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br /><strong>Ilustración:</strong> Rob Owen<br /><strong>Traducción:</strong> Espen Stranger-Johannessen<br /><strong>Idioma:</strong> Español</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://my.africanstorybook.org/stories/fire">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
