--- a/stories/es/0302_el-fuego_slides.html
+++ b/stories/es/0302_el-fuego_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/02.jpg" /></p>
-<p>Mira, ¡el fuego!</p>
+<p>¡Mira, fuego!</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/03.jpg" /></p>
-<p>El fuego quema todo.</p>
+<p>El fuego quema.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/05.jpg" /></p>
-<p>El fuego nos da el calor.</p>
+<p>El fuego calienta.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/06.jpg" /></p>
-<p>El fuego nos da la luz.</p>
+<p>El fuego ilumina.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/07.jpg" /></p>
-<p>Mira, ¡el fuego!</p>
+<p>¡Mira, fuego!</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/08.jpg" /></p>
-<p>El fuego está maravillosa</p>
+<p>El fuego es maravilloso.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0302/09.jpg" /></p>
-<p>Y está potente.</p>
+<p>Y es poderoso.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="el-fuego-1">El fuego</h2>
-<strong>Texto:</strong> Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br> <strong>Ilustración:</strong> Rob Owen<br> <strong>Traducción:</strong> Darshan Soni<br> <strong>Idioma:</strong> Español<br>
+<strong>Texto:</strong> Deborah Namugosa, Beatrice Nabune, Alison Tukei, Rose Sabano<br> <strong>Ilustración:</strong> Rob Owen<br> <strong>Traducción:</strong> Espen Stranger-Johannessen<br> <strong>Idioma:</strong> Español<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
