--- a/stories/nn/0095_zama_er_flink_slides.html
+++ b/stories/nn/0095_zama_er_flink_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
-<p>Mamma minner på, “Gløym ikkje tennene.” Eg svarar: &quot;Aldri, ikkje eg!&quot;</p>
+<p>Mamma påminner, “Gløym ikkje tennene.” Eg svarar: &quot;Aldri, ikkje eg!&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/08.jpg" /></p>
-<p>Etter vask helsar eg på bestefar og tante og ynskjer dei ein god dag.</p>
+<p>Etter kroppsvasken helsar eg på bestefar og tante og ynskjer dei ein god dag.</p>
 <center>
 <strong>7</strong>
 </center>
