--- a/audio/index.html
+++ b/audio/index.html
@@ -51,6 +51,21 @@
             <li><a href="nn/0001_ein-veldig-høg-mann_audio-slides.html" target="_blank">Ein veldig høg mann</a></li>
             <li><a href="nn/0003_skuleklede_audio-slides.html" target="_blank">Skuleklede</a></li>
           </ul>
+        <h3>Persian</h3>
+          <ul>
+            <li><a href="fa/0007_در-جستجوی-آب_audio-slides.html" target="_blank">در جستجوی آب</a></li>
+            <li><a href="fa/0008_چه-کار-داری-میکنی‌_audio-slides.html" target="_blank">چه کار داری میکنی‌</a></li>
+            <li><a href="fa/0049_رنگین-کمان_audio-slides.html" target="_blank">رنگین کمان</a></li>
+            <li><a href="fa/0093_پسر-بچه-من_audio-slides.html" target="_blank">پسر بچه من</a></li>
+            <li><a href="fa/0127_بازی‌های-گوناگون_audio-slides.html" target="_blank">بازی‌های گوناگون</a></li>
+            <li><a href="fa/0130_مادر-بزرگ-من_audio-slides.html" target="_blank">مادر بزرگ من</a></li>
+            <li><a href="fa/0192_امید-مانند-ساندویچ-کره-بادام-زمینی-است_audio-slides.html" target="_blank">امید مانند ساندویچ کره بادام زمینی است</a></li>
+            <li><a href="fa/0223_حیوانات-اهلی_audio-slides.html" target="_blank">حیوانات اهلی</a></li>
+            <li><a href="fa/0231_کتاب-وضعیت-آب-و-هوا_audio-slides.html" target="_blank">کتاب وضعیت آب و هوا</a></li>
+            <li><a href="fa/0253_کتاب-عکس-دار_audio-slides.html" target="_blank">کتاب عکس دار</a></li>
+            <li><a href="fa/0302_آتش_audio-slides.html" target="_blank">آتش</a></li>
+            <li><a href="fa/0309_کوچک-و-بزرگ_audio-slides.html" target="_blank">کوچک و بزرگ</a></li>
+          </ul>
 
   </body>
   <footer><p style="font-size:small"><a href="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0060/09.jpg">Image</a> by Karlien de Villiers (CC-BY). Found using the <a href="https://global-asp.github.io/imagebank/">ASP Imagebank Explorer</a>. View or fork this project <a href="https://github.com/global-asp/gasp-audio">on GitHub</a>.</p></footer>
